--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -20,12 +20,20 @@
         android:orientation="vertical">
 
         <EditText
+            android:id="@+id/from"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="From"/>
         <EditText
+            android:id="@+id/to"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="To"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/go"
+            android:text="GET"
+            android:layout_gravity="center"/>
     </LinearLayout>
 </RelativeLayout>
